# comp0034-wk4

./: pyproject.toml  requirements.txt
data/: paralympics_testdb.sqlite
paralympics/: routes.py
tests/: conftest.py  test_routes.py
